All Job posting endpoints working